<resources>
    <string name="app_name">Cold Temp Alt Correction</string>
    <string name="alt_1">Alt 1</string>
    <string name="alt_2">Alt 2</string>
    <string name="alt_3">Alt 3</string>
    <string name="alt_4">Alt 4</string>
    <string name="temp">Temp</string>
    <string name="calculate">Calculate</string>
    <string name="elev">Elev</string>
    <string name="action_save">Save</string>
    <string name="action_load">Load</string>
    <string name="action_delete">Delete</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_exit">Exit</string>
    <string name="alt_5">Alt 5</string>
    <string name="roundingOptionText">Rounding to the nearest:</string>
    <string name="roundig1">1 ft</string>
    <string name="rounding10">10 ft</string>
    <string name="rounding100">100 ft</string>
    <string name="save">Save</string>
    <string name="version" />
    <string name="buildTimestamp" />
    <string name="clear">Clear</string>
    <string name="back">Back</string>
</resources>